<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home_label" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search_label" />
    <item
        android:id="@+id/libraryFragment"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/menu_playlist_label" />
    <item
        android:id="@+id/addMusicFragment"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_add_label" />
    <item
        android:id="@+id/settingsCategoryFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/menu_profile_label" />
</menu>
